See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.56.00

              Add pamexec.  Thanks Michael Pot <fmw@actrix.co.nz>.

              pamcomp: Retain opacity information from underlying image.

              pnmtops: Add PBM fast path.  Thanks Prophet of the Way
              <afu@wta.att.ne.jp>.

              pnmtopng: fix bug: with -alpha specifying a mask which contains
              no fully transparent area, output PNG is fully opaque.
              Introduced in 10.29.

              pnmquant: use File::Temp::tempfile() instead of local
              approximation if it is available.

              pnmquant: work with older Perl that doesn't have 3-argument open.
              Thanks Slaven Rezic <srezic@iconmobile.com>.

              Build: pnmtops: Instead of omitting pnmtops from the build when
              there is no libz, just omit ability to create flate-compressed
              output from pnmtops.

11.06.29 BJH  Release 10.55.00

              Add pamtosrf, srftopam.  Thanks Mike Frysinger
              (vapier@gentoo.org).

              pgmtexture: fix wrong sum variance result.  Wrong since the
              beginning.  Thanks Francois P. S. Luus <fpsluus@gmail.com>.

              pamrubber: fix crash.  Introduced in 10.54.

              libnetpbm: pm_system(): fix bug - program always takes
              Standard Input from invoker's Standard Input when you don't
              supply a Standard Output accepter.  Introduced in 10.40.

              ppmtobmp: fix bug: crash ("internal error") or bogus failure or
              incorrect output on image without palette (e.g. black and
              white).  Introduced in 10.54.

              pnmtops: fix floating point exception or bogus width/height
              too large error.  Introduced in 10.53.

              pnmcat: Fix garbage output when multiple input image are from